--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ authlib<1.0.0
 azure-identity==1.12.0
 azure-storage-blob==12.14.1
 boto3==1.26.67
+urllib3<2
 chardet==5.1.0
 elastic-apm[flask]
 elasticsearch==8.6.1
