--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -2,4 +2,9 @@ pytest==7.1.2
 retrying==1.3.3
 pyftpdlib==1.5.7
 pyopenssl==22.1.0
-assemblyline_client==4.5.0
+# assemblyline_client==4.5.0
+types-PyYAML==6.0.12.12
+types-paramiko==3.3.0.0
+types-pyOpenSSL==23.3.0.0
+types-redis==4.6.0.9
+types-six==1.16.21.9
