Sync public repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,8 +55,8 @@
     "autoDocstring.docstringFormat": "google",
     "autoDocstring.guessTypes": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true,
-        "source.fixAll": true
+        "source.organizeImports": "explicit",
+        "source.fixAll": "explicit"
     },
     "python.defaultInterpreterPath": "${workspaceFolder}/env/bin/python",
     "python.analysis.autoImportCompletions": true,
@@ -64,5 +64,8 @@
         "**/build"
     ],
     "python.analysis.autoFormatStrings": true,
-    "python.analysis.completeFunctionParens": true
+    "python.analysis.completeFunctionParens": true,
+    "mypy-type-checker.ignorePatterns": [
+        "test/**/*.py"
+    ]
 }
