--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ warn_unused_configs = True
 ignore_missing_imports = True
 check_untyped_defs = True
 disable_error_code = no-redef
+exclude = test
 
 [mypy-howler.odm.models.*]
 disable_error_code = assignment
