--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ flask_caching==2.0.2
 gevent==23.9.1
 gunicorn==20.1.0
 netifaces==0.11.0
-packaging==23.0
+packaging==22.0
 passlib==1.7.4
 prometheus-client==0.17.1
 pyjwt==2.6.0
 pyroute2.core==0.6.13
 pysftp==0.2.9
+pysigma==0.10.10
+pysigma-backend-elasticsearch==1.0.9
 python-baseconv==1.2.2
 python-datemath==1.5.5
 PyYAML==6.0
