--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,29 +72,31 @@ stages:
           keycloak: keycloak
 
         steps:
+          - checkout: self
+            fetchDepth: 100
+          - script: |
+              git fetch --force --tags --prune --prune-tags --progress --no-recurse-submodules origin --depth=1 develop
+            displayName: Fetch develop for diff coverage
           - task: UsePythonVersion@0
             displayName: Set python version
             inputs:
               versionSpec: "3.9"
           - script: |
-              sleep 30
-            displayName: sleep time (allow ES to be ready)
-          - script: |
               sudo mkdir -p /var/cache/howler/
               sudo mkdir -p /var/lib/howler/
               sudo chmod a+rw /var/cache/howler/
               sudo chmod a+rw /var/lib/howler/
+              sudo cp test/unit/config.yml /etc/howler/conf/config.yml
               sudo apt-get update
-              sudo apt-get install -y build-essential libffi-dev libfuzzy-dev python3-dev libldap2-dev libsasl2-dev wget
+              sudo apt-get install -y build-essential libffi-dev libfuzzy-dev python3-dev libsasl2-dev wget
             displayName: Setup Environment
             workingDirectory: $(Pipeline.Workspace)/s
           - script: |
               python -m venv venv
               . ./venv/bin/activate
               python -m pip install --upgrade pip
-              python -m pip install --no-cache-dir -e .
-
-              python -m pip install --no-cache-dir -r test/requirements.txt
+              python -m pip install -e .
+              python -m pip install -r test/requirements.txt
             displayName: Install howler-api
             workingDirectory: $(Pipeline.Workspace)/s
           - script: |
