--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,14 +83,14 @@ stages:
               poetry check
             displayName: Check for poetry config integrity
           - script: |
-              mkdir -p /var/cache/howler/
-              mkdir -p /var/lib/howler/
-              mkdir -p /etc/howler/conf/
-              mkdir -p /etc/howler/lookups/
-              chmod a+rw /var/cache/howler/
-              chmod a+rw /var/lib/howler/
-              chmod a+rw /etc/howler/conf/
-              chmod a+rw /etc/howler/lookups/
+              sudo mkdir -p /var/cache/howler/
+              sudo mkdir -p /var/lib/howler/
+              sudo mkdir -p /etc/howler/conf/
+              sudo mkdir -p /etc/howler/lookups/
+              sudo chmod a+rw /var/cache/howler/
+              sudo chmod a+rw /var/lib/howler/
+              sudo chmod a+rw /etc/howler/conf/
+              sudo chmod a+rw /etc/howler/lookups/
               cp build_scripts/classification.yml /etc/howler/conf/classification.yml
               cp test/unit/config.yml /etc/howler/conf/config.yml
             displayName: Setup Environment
