--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl --silent --fail -u elastic:$$ELASTIC_PASSWORD localhost:9200/_cluster/health || exit 1"
+          "curl --silent --fail -u elastic:$$ELASTIC_PASSWORD localhost:9200/_cluster/health || exit 1",
         ]
       interval: 30s
       timeout: 30s
@@ -41,7 +41,7 @@ services:
       - "6379:6379"
       - "6380:6379"
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
