--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+######################
+# autoflake settings #
+######################
+[tool.autoflake]
+check = true
+
 ##################
 # Black settings #
 ##################
@@ -74,7 +80,7 @@ ignore_missing_imports = true
 [tool.poetry]
 package-mode = true
 name = "howler-api"
-version = "2.1.0"
+version = "2.2.0"
 description = "Howler - API server"
 authors = [
     "Canadian Centre for Cyber Security <howler@cyber.gc.ca>",
