--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ variables:
   dockerfilePath: "$(Build.SourcesDirectory)/docker/Dockerfile"
 
 pool:
-  vmImage: "ubuntu-latest"
+  vmImage: "ubuntu-24.04"
 
 resources:
   containers:
@@ -142,15 +142,19 @@ stages:
             displayName: Fetch target branch for diff coverage
             condition: eq(variables.isPrBranch, true)
           - script: |
-              python -m pip install poetry
-            displayName: Install poetry
+              sudo apt install -yy software-properties-common
+              sudo add-apt-repository -y ppa:deadsnakes/ppa
+              sudo apt install -yy python3.12 python3.12-dev python3.12-venv
+            displayName: Install Python
           - script: |
-              python -m poetry --version
-              python -m poetry check
-              python -m poetry env info
+              pip install poetry
+            displayName: Install Poetry
+          - script: |
+              poetry --version
+              poetry check
+              poetry env info
             displayName: Check for poetry config integrity
           - script: |
-              apt-get install sudo
               sudo mkdir -p /var/log/howler/
               sudo mkdir -p /var/cache/howler/
               sudo mkdir -p /var/lib/howler/
@@ -166,17 +170,17 @@ stages:
             displayName: Setup Environment
             workingDirectory: $(Pipeline.Workspace)/s
           - script: |
-              python -m poetry install --verbose --with test
-              python -m poetry run mitre /etc/howler/lookups
-              python -m poetry run sigma
+              poetry install --verbose --with test
+              poetry run mitre /etc/howler/lookups
+              poetry run sigma
             displayName: Install howler-api
             workingDirectory: $(Pipeline.Workspace)/s
           - script: |
-              python -m poetry run test
+              poetry run test
             workingDirectory: $(Pipeline.Workspace)/s
             displayName: Test
           - script: |
-              python -m poetry run coverage_report
+              poetry run coverage_report
             workingDirectory: $(Pipeline.Workspace)/s
             displayName: Coverage Results
             condition: and(eq(variables.isPrBranch, true), eq(variables['python.version'], '3.12'))
