--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,8 +81,6 @@ stages:
             persistCredentials: true
           - script: |
               python --version
-              sudo apt install pipx
-              pipx ensurepath
               pipx install poetry
             displayName: Install poetry
           - script: |
@@ -143,10 +141,10 @@ stages:
           - script: |
               sudo apt install -yy software-properties-common
               sudo add-apt-repository -y ppa:deadsnakes/ppa
-              sudo apt install -yy python3.12 python3.12-dev python3.12-venv
+              sudo apt install -yy python$(python.version) python$(python.version)-dev python$(python.version)-venv
             displayName: Install Python
           - script: |
-              python$(python.version) -m pip install poetry
+              pipx install poetry
             displayName: Install Poetry
           - script: |
               poetry --version
