--- a/pyproject.toml
+++ b/pyproject.toml
@@ -201,6 +201,8 @@ typing-extensions = "^4.12.2"
 flasgger = "^0.9.7.1"
 pysigma = "0.11.17"
 pysigma-backend-elasticsearch = "^1.1.2"
+mergedeep = "^1.3.4"
+validators = "^0.34.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
