--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -2,15 +2,6 @@ version: "2.4"
 
 services:
   # Dependencies
-  minio:
-    image: minio/minio
-    environment:
-      MINIO_ROOT_USER: hwl_storage_key
-      MINIO_ROOT_PASSWORD: Ch@ngeTh!sPa33w0rd
-    ports:
-      - "9000:9000"
-    command: server /data
-
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.3.3
     environment:
@@ -29,7 +20,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl --silent --fail -u elastic:$$ELASTIC_PASSWORD localhost:9200/_cluster/health || exit 1"
+          "curl --silent --fail -u elastic:$$ELASTIC_PASSWORD localhost:9200/_cluster/health || exit 1",
         ]
       interval: 30s
       timeout: 30s
@@ -41,7 +32,7 @@ services:
       - "6379:6379"
       - "6380:6379"
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
